<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_test_fragment"
            android:icon="@drawable/ic_test"
            android:title="@string/nav_test" />
        <item
            android:id="@+id/nav_history_fragment"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_router_manager_fragment"
            android:icon="@drawable/ic_router"
            android:title="@string/nav_router_manager" />
        <item
            android:id="@+id/nav_settings_fragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>
    <group>
        <item
            android:id="@+id/nav_about_drawer"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_exit_drawer"
            android:icon="@drawable/ic_close"
            android:title="@string/nav_exit" />
    </group>
</menu>
