<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home_fragment">

    <fragment
        android:id="@+id/nav_home_fragment"
        android:name="com.wdmaster.app.presentation.home.HomeFragment"
        android:label="@string/title_home">
        <argument
            android:name="routerId"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/nav_test_fragment"
        android:name="com.wdmaster.app.presentation.test.TestFragment"
        android:label="@string/title_test">
        <argument
            android:name="routerId"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings_fragment"
        android:name="com.wdmaster.app.presentation.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/nav_router_manager_fragment"
        android:name="com.wdmaster.app.presentation.settings.RouterManagerFragment"
        android:label="@string/title_router_manager" />

    <fragment
        android:id="@+id/nav_history_fragment"
        android:name="com.wdmaster.app.presentation.history.HistoryFragment"
        android:label="@string/title_history" />

</navigation>